--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.1
       with:
         github_access_token: ${{ secrets.ACCESS_TOKEN }}
-        base_href: https://rolandmeo.github.io/
+        base_href: /rolandmeo.github.io/
         deploy_branch: gh-pages
         angular_dist_build_folder: dist/rolandmeo
+        build_configuration: production
