--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install and Build 🔧
         run: |
@@ -16,10 +16,10 @@ jobs:
           npm run build --output-path=docs
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           access_token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
-          folder: dist/rolandmeo.github.io
+          folder: docs
           build_script: npm install && npm run build -- --prod --output-path=docs
