--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -21,5 +21,5 @@ jobs:
           token: ${{ secrets.ACCESS_TOKEN }}
           access_token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
-          folder: dist/rolandmeo.github.io/docs
+          folder: dist/rolandmeo.github.io
           build_script: npm install && npm run build -- --prod --output-path=docs
