--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm ci
-          ng build --configuration "production" --output-path=docs
+          npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
