--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -22,4 +22,5 @@ jobs:
           access_token: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
           folder: dist/rolandmeo.github.io
+          target-folder: docs
           build_script: npm install && ng build -- --configuration "production" --output-path=docs
