--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -15,6 +15,9 @@ jobs:
           npm ci
           npm run build
 
+      - name: Tests for the Karma 🤓
+        run: npm test
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
