--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -16,7 +16,7 @@ jobs:
           npm run build
 
       - name: Tests for the Karma 🤓
-        run: npm test
+        run: npm test  -- --watch=false --browsers=ChromeHeadless
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
